dfir_rs/tests/snapshots/surface_join_fused__static_static_lhs_blocking_rhs_streaming@graphvis_dot.snap
---
source: dfir_rs/tests/surface_join_fused.rs
expression: df.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter([(7, 1), (7, 2)])", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) map(|(k, v)| (k, SetUnionSingletonSet::new_from(v)))", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) source_iter([(7, 0)])", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) source_iter([(7, 1)])", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) defer_tick()", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) source_iter([(7, 2)])", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) defer_tick()", shape=invhouse, fillcolor="#88aaff"]
    n8v1 [label="(n8v1) defer_tick()", shape=invhouse, fillcolor="#88aaff"]
    n9v1 [label="(n9v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n10v1 [label="(n10v1) join_fused_lhs::<\l    'static,\l    'static,\l>(\l    Fold::new(\l        SetUnionHashSet::default,\l        |state, delta| {\l            Merge::merge(state, delta);\l        },\l    ),\l)\l", shape=invhouse, fillcolor="#88aaff"]
    n11v1 [label="(n11v1) for_each(|x| {\l    results_inner.borrow_mut().entry(context.current_tick()).or_default().push(x)\l})\l", shape=house, fillcolor="#ffff88"]
    n12v1 [label="(n12v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n13v1 [label="(n13v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n14v1 [label="(n14v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n15v1 [label="(n15v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n2v1 -> n12v1
    n1v1 -> n2v1
    n3v1 -> n9v1
    n5v1 -> n9v1
    n4v1 -> n13v1
    n8v1 -> n9v1
    n7v1 -> n14v1
    n6v1 -> n15v1
    n9v1 -> n10v1 [label="1"]
    n10v1 -> n11v1
    n12v1 -> n10v1 [label="0", color=red]
    n13v1 -> n5v1 [color=red]
    n14v1 -> n8v1 [color=red]
    n15v1 -> n7v1 [color=red]
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1"
        n1v1
        n2v1
    }
    subgraph sg_2v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1"
        n4v1
    }
    subgraph sg_3v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1"
        n6v1
    }
    subgraph sg_4v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_4v1"
        n7v1
    }
    subgraph sg_5v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_5v1"
        n8v1
        n5v1
        n3v1
        subgraph sg_5v1_var_my_join {
            cluster=true
            label="var my_join"
            n10v1
            n11v1
        }
        subgraph sg_5v1_var_unioner {
            cluster=true
            label="var unioner"
            n9v1
        }
    }
}
